# caliph-rs

./: .eslintrc.yml  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/common/: args.rs  fit.rs  lib.rs  routines.rs  stats.rs
src/common/args/: args_caliph.rs  args_conph.rs
src/libcaliph/: .routines.rs.rustfmt  fit.rs  lib.rs  routines.rs  stats.rs
src/libcaliph/args/: args_caliph.rs  args_conph.rs
